--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </a>
             </div>
             <div class="hero-image">
-                <img src="/images/jacket-woman.png" alt="Fashion Image" class="img-fluid">
+                <img src="./images/jacket-woman.png" alt="Fashion Image" class="img-fluid">
             </div>
         </div>
     </section>
